# ChangeLog for dev-libs/libgcrypt
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgcrypt/ChangeLog,v 1.101 2007/12/12 17:25:09 corsair Exp $

  12 Dec 2007; Markus Rothe <corsair@gentoo.org> libgcrypt-1.4.0.ebuild:
  Added ~ppc64; bug #201901

  11 Dec 2007; Alon Bar-Lev <alonbl@gentoo.org> libgcrypt-1.4.0.ebuild:
  Removed padlock, bug#201917, thanks to many

*libgcrypt-1.4.0 (10 Dec 2007)

  10 Dec 2007; Alon Bar-Lev <alonbl@gentoo.org> +libgcrypt-1.4.0.ebuild:
  Version bump

  10 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org> -libgcrypt-1.1.12.ebuild,
  -libgcrypt-1.1.94.ebuild, -libgcrypt-1.2.0.ebuild,
  -libgcrypt-1.2.1.ebuild, -libgcrypt-1.2.1-r1.ebuild,
  -libgcrypt-1.2.2.ebuild, -libgcrypt-1.2.3.ebuild,
  -libgcrypt-1.2.3-r1.ebuild:
  Cleanup

  09 Oct 2007; Christoph Mende <angelos@gentoo.org> libgcrypt-1.2.4.ebuild:
  Stable on amd64 wrt bug #194113

  05 Oct 2007; Tom Gall <tgall@gentoo.org> libgcrypt-1.2.4.ebuild:
  stable on ppc64

  02 Oct 2007; Raúl Porcel <armin76@gentoo.org> libgcrypt-1.2.4.ebuild:
  alpha/ia64 stable wrt #194113

  30 Sep 2007; Markus Meier <maekke@gentoo.org> libgcrypt-1.2.4.ebuild:
  x86 stable, bug #194113

  29 Sep 2007; Lars Weiler <pylon@gentoo.org> libgcrypt-1.2.4.ebuild:
  stable ppc, bug #194113

  29 Sep 2007; Jeroen Roovers <jer@gentoo.org> libgcrypt-1.2.4.ebuild:
  Stable for HPPA (bug #194113).

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org> libgcrypt-1.2.4.ebuild:
  Sparc stable --- Bug #194113 --- all tests pass.

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  03 Mar 2007; Marius Mauch <genone@gentoo.org> libgcrypt-1.2.3-r1.ebuild,
  libgcrypt-1.2.4.ebuild:
  Replacing einfo with elog/ewarn

*libgcrypt-1.2.4 (02 Feb 2007)

  02 Feb 2007; Alon Bar-Lev <alonbl@gentoo.org> +libgcrypt-1.2.4.ebuild:
  Version bump
