@@ -4,7 +4,7 @@ DIST libgcrypt-1.2.4-idea.diff.bz2 2924 RMD160 199cfb4224b6cebc940f4cfb876deb700
 DIST libgcrypt-1.2.4.tar.gz 1013625 RMD160 6a5ba284efe48c6963e21d8558a69096aea03d84 SHA1 d279e7a4464cccf0cc4e29c374a1e8325fc65b9a SHA256 cf3c3f313ebeb9165d80439beaeb7f621b73856a2159e4b84c70f32b455fd9ec
 DIST libgcrypt-1.4.0-idea.diff.bz2 2944 RMD160 4044cc244ca375a832674561cf030840c239ee86 SHA1 2e96628a66918d868aca1aaebc8bdb58d59be9ba SHA256 56bc3da6e8477f2cc3ce3186c175442124d4c5f5c7078704765b33cc944340d3
 DIST libgcrypt-1.4.0.tar.bz2 964779 RMD160 bccec927cdf0437778d8aa1071b27a871ed5c72d SHA1 cd1b52e8ecfa361737c6f130ed2f1d850e312c16 SHA256 d7f855f766944a5b6e7ffee2d6ffdf828ab709acd4453b0e64aea808ce2760ec
-EBUILD libgcrypt-1.2.4.ebuild 2682 RMD160 4cb8080723c4588daf84f43e97bd956c1cdfbe84 SHA1 7b6338c1cfa0e1ee9b93d4ca3be5fa85a924424d SHA256 fbc0b71d7e42f65ccacbaa0a05756d67a43ccfdbde302ef91d9206445aea9363
-EBUILD libgcrypt-1.4.0.ebuild 2380 RMD160 3fb2963900816fbc153013fc0286b54e4aaa0aca SHA1 4c63d48007202cb786a485c5c595e948d4f6ea6c SHA256 ded8170fdfe8bb7e58a940bf33e2a450940d90c61ef67511bc194d3660901859
-MISC ChangeLog 14681 RMD160 4bf3883e6ff5d35e17fa107f68b5642ab169660f SHA1 0de7b6a049f768415e40f9d0273008b674d82dfd SHA256 8a94d0ea9241e30b03032850e5f51ee19bb5461852402cb4abe3dc7d49643eea
+EBUILD libgcrypt-1.2.4.ebuild 2580 RMD160 bda3ff9ede53e99a425ee3483e16a6f4770e2c25 SHA1 eff68a386cb1adc29707b66d59e3682f4fce78b1 SHA256 ce9d76eaab7c4ea492075162191694fd6f54a86cd0461baef179986c4402db7d
+EBUILD libgcrypt-1.4.0-r1.ebuild 2280 RMD160 364ded4b8958a3fdb5f5de6a1e76e90a53c33ce5 SHA1 f429be6901d63ef521c6d20ac4082e8058b31197 SHA256 47c157ad43a9261cacf66c3b0adb5a957b5c062adab3f1ca4dda2d41dc57bece
+MISC ChangeLog 14976 RMD160 e65f48a46c7572762557e1ebf1f3d3d48139511d SHA1 8f89d8b3d41cc570a5e7fafbabc7d14c61e76d2f SHA256 31578e63754b263e24334cb3d5e7e00148e123573a17622b4cab0474435c0a94
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
